--- a/fetch-data-agent/package.json
+++ b/fetch-data-agent/package.json
@@ -14,14 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
-    "better-sqlite3": "^9.2.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
+    "@types/sqlite3": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
