--- a/fetch-data-agent/package.json
+++ b/fetch-data-agent/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test-api": "ts-node src/test-api.ts"
   },
   "keywords": [],
   "author": "",
