--- a/fetch-data-agent/package.json
+++ b/fetch-data-agent/package.json
@@ -18,7 +18,8 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "dotenv": "^16.3.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "protobufjs": "^7.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
