Remove obsolete files and add new setup and quick start guides
- Deleted outdated files including `plan.md`, `SNAPSHOT_SCHEMA.md`, `test_all_agents.py`, and `TESTING_GUIDE.md` to streamline the project structure.
- Introduced `SETUP_INSTRUCTIONS.md` and `QUICK_START.md` to provide clear guidance for setting up the environment and starting the application.
- Updated `PRODUCTION_AUTH_GUIDE.md` with additional information for better clarity on authentication processes.
- Enhanced the overall documentation to improve onboarding for new developers and users.

--- a/news-agent/.gitignore
+++ b/news-agent/.gitignore
@@ -11,3 +11,15 @@ __pycache__/
 *.pyzwz
 *.pyzwzw
 *.pyzwzwz
+cache/
+data/
+logs/
+*.log
+*.log.*
+*.log.*.*
+*.log.*.*.*
+*.log.*.*.*.*
+*.log.*.*.*.*.*
+*.log.*.*.*.*.*.*
+*.log.*.*.*.*.*.*.*
+*.log.*.*.*.*.*.*.*.*
