--- a/trade-agent/requirements.txt
+++ b/trade-agent/requirements.txt
@@ -1,6 +1,7 @@
 langgraph>=0.2.0
 langchain>=0.2.0
 pydantic>=2.7.0
+pydantic-settings>=2.0.0
 python-dotenv>=1.0.0
 requests>=2.32.0
 pandas>=2.2.0
